--- a/simple/css/main.css
+++ b/simple/css/main.css
@@ -1,176 +1,378 @@
+
 *{
-	box-sizing: borderbox;
+	box-sizing: border-box;
 }
 
-.group:after {
-  content: "";
-  display: table;
-  clear: both;
+html{
+	font-size: 16px;
 }
 
 body{
-	font-family: 'Titillium Web', Arial, Helvetica, sans-serif;
-	font-size: 16px;
+	font-family: 'Titillium Web', Helvetica, Arial, sans-serif;
+	font-size: 62.5%;
+	line-height: 1.5;
 	font-weight: 300;
-	line-height: 1.5em;
-	color: #d9d8d9;
- 	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
+	color: #555;
+}
+
+h1, h2, h3, h4, h5, h6, button, .explore, .button, ul.social li a{
+	font-family: 'Teko', Arial, sans-serif;
+	font-weight: 300;
+	text-transform: uppercase;
+}
+
+h2, h3, h4, h5, h6, ul.social li a{
+	font-weight: 400;	
+	letter-spacing: 2px;
+}
+
+h1{
+  font-size: 120px; 
+  color: #fff;
+  letter-spacing: 13px;
+  text-align: center;
+  line-height: 1;
+  margin-bottom: 30px;  
+}
+h2{
+	font-size: 40px;
+	color: #000;
+}
+h3{
+	font-size: 30px;
+	color: #000;
+}
+a{
+	text-decoration: none;
+	-webkit-transition: all 0.3s ease-out;
+	-moz-transition: all 0.3s ease-out;
+	-o-transition: all 0.3s ease-out;
+	transition: all 0.3s ease-out;
+}
+
+button{
+	padding: 15px;
+	border: 2px solid rgba(255,255,255,0.5);
+	margin: 0 auto;
+	background: transparent;
+	font-size: 20px;
+	color: #fff;
+}
+
+.clearfix:after{
+	display: table;
+	content: '';
+	clear: both;
+}
+
+.hero{
+	position: relative;	
+	height: 90vh;
+	color: #fff;
+	text-align: center;
+}
+
+.hero p{
+	width: 60%;
+	margin: 0 auto 40px;
+	font-size: 22px;
+}
+
+.hero a.explore, a.button{
+	display: block;
+	font-size: 20px;
+	color: #000;
+	padding: 20px 56px;
+	width: 236px;
+	background: #fff;
+	text-align: center;
+	margin: 0 auto;
+	font-weight: 400;
+	letter-spacing: 3px;
+}
+
+.hero a.explore:hover{
+	background: #f63c3c;
+	color: #fff;
+	
 }
 
 header{
-		background: url(../img/background.jpg) center center no-repeat fixed;
+	height: 100vh;
+	min-height:600px;
+	background: #7f7b7e url(../img/background1.jpg) no-repeat center center;	
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+header nav a:hover{
+	opacity: 1;
 }
 
 .container{
-	position: relative;
-	width: 70%;
 	max-width: 1170px;
 	margin: 0 auto;
 }
 
-.navigation {
-	display: inline-block;
-	font-family: Titillium Web, Helvetica, Arial, sans-serif;
-	color: #fff;
-	float: right;
-}
 
 nav ul li{
 	display: inline-block;
-	margin:40px;
+	margin-right: 38px;
+	height: 46px;
 }
+
 
 nav ul li a{
+	color: #fff;
+	opacity: 0.5;
 	text-decoration: none;
-	color: #fff;
+	font-size: 1.6em;
 }
 
-h1{
-	font-family: Teko, Helvetica, Arial, sans-serif;
-	font-size: 120px;
-	letter-spacing: 12px;
-	margin-bottom: 48px;
-	font-weight: 300;
-	text-transform: uppercase;
-	color: #fff;
-	line-height: 1.2em;
+
+nav ul li.active{	
+	border-bottom: 3px solid #fff;
 }
 
-p{
-	font-size: 22px;
-	margin-bottom: 40px;
-	font-weight: 300;	
+nav ul li.active a{
+	opacity: 1;
 }
 
-button{
-	font-family: Teko, Helvetica, Arial, sans-serif;
+.top_bar{
+	height: 71px;
+	width: 100%;
+	border-bottom: 1px solid rgba(255,255,255, 0.1);
+}
+
+.logo{
+	float: left;
+	width: 70px;
+	height: 70px;
+	background: url(../img/logo.gif) top left no-repeat;
+}
+.navigation{
+	float: right;
+	padding-top: 24px;
+}
+
+button .fa-play{
+	margin-right: 10px;
+}
+
+.hero a{
+	position: relative;
+  display: block;
+  margin: 0 auto;
+  width: 160px;
+}
+
+.title{
+	width: 100%;
+	margin: 0 auto; 
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	height: 450px;
+	-webkit-transform: translate(-50%, -60%);  
+	-moz-transform: translate(-50%, -60%);  
+	-o-transform: translate(-50%, -60%);  
+	transform: translate(-50%, -60%);  
+}
+
+.hero nav ul{
+  position: absolute;
+  left: 50%;  
+  bottom: 30px;
+  transform: translate(-50%, -50%);
+}
+
+.hero nav ul li{
+  display: inline-block;
+  width: 40px;
+  height: 4px;
+  margin-right: 10px;
+  background: #fff;
+  opacity: 0.25;
+}
+.hero nav ul li:last-child{
+	margin-right: 0;
+}
+.hero nav ul li.active{
+	opacity: 1;
+}
+
+.work h2, .work h3{
+	text-align: center;
+}
+.work h2{
+	margin: 50px 0;
+}
+.work h3{
+	margin-top: 25px;
+}
+
+.work article{
+	width: 48.5%;
+	float: left;
+	margin: 0 0 35px 1%;
+}
+.work article:nth-child(2n+1){
+	margin-right: 1%;
+}
+.project_thumb{
+	position: relative;
+}
+
+.project_thumb figcaption{
+	position: absolute;
+	z-index: 10;
+	background-color: #f63c3c;
+	border: 20px solid #352d2f;
+}
+
+.thumbnail{
+	position: absolute;
+	z-index: 1;
+}
+
+.work article img{
+	width: 100%;
+	height: auto;
+}
+
+.work article p{
+	font-size: 14px;
+	text-align: center;
+	width: 60%;
+	margin: 0 auto;
+}
+
+.show_more{
+	text-align: center;
+	margin: 75px 0;
+}
+
+.show_more a{
+	font-family: 'Teko', Arial, sans-serif;
+	font-weight: 400;
 	font-size: 20px;
 	text-transform: uppercase;
-	color: #000;	
-	width:240px;
-	height: 55px;
-	margin: 0 auto;
-	letter-spacing: 2px;
-}
-
-h2{
-	text-align: center;
-	text-transform: uppercase;
-	margin-top: 20p;
-}
-article{
 	display: inline-block;
+	text-align: center;
+	color: #f63c3c;
+	border-bottom: 4px solid #f63c3c;
 }
 
-article figure img{
-	width: 40%;
-}
-
-article h3{
-	font-size: 30px;
-	font-family: Teko, Helvetica, Arial, sans-serif;
-	color: #000;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-}
-
-article p{
-	font-size: 14px;
-	font-family: Titillium Web, Helvetica, Arial, sans-serif;
-	color: #d4d4d4;
-}
 .cta{
-	background-color: #f63c3c;
-	height: 240px;
+	background: #f63c3c;
+	color: #fff;
+	text-align: center;
+	padding: 55px 0;
 }
 
 .cta h2{
-	font-size: 42px;
-	letter-spacing: 2px;
-	text-align: center;
+	color: #fff;	
+}
+
+.cta p{
+	font-size: 16;
+	opacity: 0.7;
+}
+
+ .cta a.button{
+	color: #685157;
+	margin-top: 22px;
+ }
+ 
+ .cta a.button:hover{
+	background: #000;
 	color: #fff;
-	padding-top: 60px;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-}
-
-.cta p{	
-	text-align: center;
-}
-
-.cta a button{
-	background-color: #fff;
-	font-size: 20px;
-}`
-
-h2{
-	font-family: Teko, Helvetica, Arial, sans-serif;
-	font-size: 30px;
-	margin:  
-	text-transform: uppercase;
-	color: #000000;
-	letter-spacing: 2px;
-}
-
-.contact h2{
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	margin-bottom: 10px;
-}
-
-.contact ul li {
-	display: block;
-}
-
-.contact ul li {
+ }
+ 
+ .contact{
+	padding: 64px 0 50px;
+	background: #fafafa;
+ }
+ 
+ ul.social{
+	margin-top: 60px;	
+ }
+ 
+ ul.social li{
+	position: relative;
+	vertical-align: top;
+	width: 270px;
+	height: 195px;
 	display: inline-block;
-	width: 20%;
-	max-width: 270px;
-	height:195px;
-	background-color: #30282a;
-}
-.contact ul li i {
-	display: block;
-	color: #fff;
 	text-align: center;
-	font-size: 50px;
-	padding-top: 40px;
-}
-
-.contact ul li a {
-	display: block;
-	text-decoration: none;
 	color: #fff;
-	font-family: Teko, Helvetica, Arial, sans-serif ;
+	background: #30282a;
+	margin-right: 1.5%;
+ }
+ 
+ul.social li:last-child{
+	margin-right: 0;
+  }
+  
+ul.social li a{
+	display: block;
+	width: 100%;
 	font-size: 30px;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	text-align: center;
-	padding-top: 10px;
+	color: #fff;
+	font-weight: 300;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -60%);  
+	-moz-transform: translate(-50%, -60%);  
+	-o-transform: translate(-50%, -60%);  
+	transform: translate(-50%, -50%);
 }
 
-.copyright {
-	margin-top: 20px;
+ul.social li i{
+	display:block;
+	text-align: center;
+	color: #fff;
+	font-size: 50px;
 }
+
+.copyright{
+	padding: 40px 0;
+}
+.copyright p{
+	color: #555555;
+	font-size: 13px;	
+}
+
+@media screen and (max-width: 1024px){
+	h1{
+		font-size: 100px;
+	}
+    .hero p {
+  		width: 80%;
+  	}		
+}
+
+@media screen and (max-width:480px){
+	.work article{
+		width: 95%;
+	}
+}
+
+
+@media 
+(-webkit-min-device-pixel-ratio: 2), 
+(min-resolution: 192dpi) { 
+    .logo{
+    	background: url(../img/logo@2x.gif) no-repeat top left;
+    	background-size: 70px 70px;
+    }
+}
+
+
+
+
+
+
