--- a/simple/css/main.css
+++ b/simple/css/main.css
@@ -15,7 +15,8 @@ body{
 	color: #555;
 }
 
-h1, h2, h3, h4, h5, h6, button, .explore, .button, ul.social li a{
+h1, h2, h3, h4, h5, h6, button, .explore, .button, ul.social li a,
+.project_thumb .description{
 	font-family: 'Teko', Arial, sans-serif;
 	font-weight: 300;
 	text-transform: uppercase;
@@ -48,6 +49,10 @@ a{
 	-moz-transition: all 0.3s ease-out;
 	-o-transition: all 0.3s ease-out;
 	transition: all 0.3s ease-out;
+}
+
+p{
+	font-size: 16px;
 }
 
 button{
@@ -98,7 +103,8 @@ button{
 }
 
 header{
-	height: 1076px;
+	height: 100vh;
+	min-height: 600px;
 	background: #7f7b7e url(../img/background1.jpg) no-repeat center center;	
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -156,9 +162,62 @@ nav ul li.active a{
 	padding-top: 24px;
 }
 
+.top_bar .icon_bar{
+	display: block;
+	width: 24px;
+	height: 2px;
+	margin: 0 auto 4px;	
+	background-color: #fff;
+	-webkit-transition: all 0.3s ease-out;
+	-moz-transition: all 0.3s ease-out;
+	-o-transition: all 0.3s ease-out;
+	transition: all 0.3s ease-out;		
+}
+
+.top_bar .icon_bar.open:first-child{
+	position: absolute;
+	top: 32px;
+	left: 23px;		
+	transform: rotate(45deg);
+	transform-origin: 50%, 50%;
+}
+
+.top_bar .icon_bar.open:nth-child(2){
+	opacity: 0;
+}
+
+.top_bar .icon_bar.open:last-child{
+	position: absolute;
+	top: 32px;
+	left: 23px;		
+	transform: rotate(-45deg);
+	transform-origin: 50%, 50%;
+}
+
+.menu{
+	display: none;
+	cursor: pointer;
+	position: relative;
+	padding-top: 28px;
+	z-index: 1000;
+	background-color: rgba(0,0,0, 0.5);
+	width: 70px;
+	height: 70px;
+	-webkit-transition: all 0.3s ease-out;
+	-moz-transition: all 0.3s ease-out;
+	-o-transition: all 0.3s ease-out;
+	transition: all 0.3s ease-out;	
+}
+
+.menu:hover{
+	background-color: rgba(0,0,0,1);
+}
+
 button .fa-play{
 	margin-right: 10px;
 }
+
+/************ Hero **************/
 
 .hero a{
 	position: relative;
@@ -202,6 +261,8 @@ button .fa-play{
 	opacity: 1;
 }
 
+/********* My Projects ***************/
+
 .work h2, .work h3{
 	text-align: center;
 }
@@ -210,6 +271,63 @@ button .fa-play{
 }
 .work h3{
 	margin-top: 25px;
+}
+
+.work article figure{
+	-webkit-perspective: 800;	
+	perspective: 800  	
+
+}
+.project_thumb{
+	position: relative;
+	display: block;
+	text-decoration: none;
+	transform-style: preserve-3d;
+	transform: rotateY(0deg);
+}
+
+.project_thumb figcaption{
+	position: absolute;
+	transform: rotateY(180deg);	
+	backface-visibility: hidden;
+	/*opacity: 0;*/
+	z-index: 10;
+	background-color: #f63c3c;
+	border: 19px solid #352d2f;
+	width: 100%;
+	height: 100%;
+	transition: all 0.4s ease-out;
+}
+
+.project_thumb .description{
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	color: #fff;
+	text-align: center;
+}
+
+.work article:hover .project_thumb{
+	transform: rotateY(180deg);
+}
+
+.project_thumb:hover figcaption{
+	/*opacity: 1;*/
+}
+
+.description h4{
+	font-size: 24px;	
+}
+
+.description p{
+	font-size: 18px;
+}
+
+.thumbnail{
+	position: relative;
+	z-index: 1;
+	backface-visibility: hidden;
 }
 
 .work article{
@@ -221,6 +339,7 @@ button .fa-play{
 	margin-right: 1%;
 }
 .work article img{
+	display: block;
 	width: 100%;
 	height: auto;
 }
@@ -260,6 +379,7 @@ button .fa-play{
 }
 
 .cta p{
+	font-size: 16px;
 	opacity: 0.7;
 }
 
@@ -285,13 +405,13 @@ button .fa-play{
  ul.social li{
 	position: relative;
 	vertical-align: top;
-	width: 270px;
+	width: 23.5%;
 	height: 195px;
-	display: inline-block;
+	float: left;
 	text-align: center;
 	color: #fff;
 	background: #30282a;
-	margin-right: 1.5%;
+	margin-right: 2%;
  }
  
 ul.social li:last-child{
@@ -328,6 +448,9 @@ ul.social li i{
 	font-size: 13px;	
 }
 
+
+
+
 @media screen and (max-width: 1024px){
 	h1{
 		font-size: 100px;
@@ -337,10 +460,118 @@ ul.social li i{
   	}		
 }
 
+@media screen and (max-width: 768px){
+	h1{
+		font-size: 72px;
+	}
+	.hero p {
+		font-size: 18px;
+	}
+	.menu{
+		display: block;
+	}
+	.navigation {
+		padding-top: 0px;
+	}
+
+	.navigation ul{
+		display: none;
+		margin-top: 0px;
+		background-color: #000;
+		position: absolute;
+		left: 0;
+		z-index: 100;	
+		width: 100%;	
+	}
+
+	nav ul li{
+		display: block;
+		text-align: center;
+		margin-right: 0px;
+		border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+	}
+
+	nav ul li.active {
+		border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+	}
+
+	nav ul li:first-child{
+		border-top: 1px solid rgba(255, 255, 255, 0.5);
+	}
+
+	nav ul li a{
+		display: block;
+		width: 100%;
+		height: 100%;
+		padding-top: 9px;
+	}
+	nav ul li a:hover{
+		background-color: red;
+	}
+
+	.top_bar {
+		border-bottom: none;
+		background-color: #000;
+	}
+	.contact, footer.copyright{
+		text-align: center;
+	}
+
+}
+
 @media screen and (max-width:480px){
+
+	h1{
+		font-size: 58px;
+	}
+
+	h2{
+		line-height: 1.1em;
+	}
+
+	.hero{
+		display: table;
+	}
+
+	.title{
+	   display: table-cell;
+	   vertical-align: middle;
+	   position: static; 
+	   height: auto; 
+	   -webkit-transform: none;	   
+	   -o-transform: none;
+	   -moz-transform: none;
+	   transform: none;
+	}
+
 	.work article{
 		width: 95%;
 	}
+
+	.work article p{
+		width: 100%	;
+	}
+
+	ul.social li{
+		font-size: 32px;
+		color: #30282a;
+		background: none;
+		height: 50px;
+	}
+
+	ul.social li i{
+		font-size: 40px;
+		color: #30282a;
+	}
+
+	ul.social li span{
+		display: none;
+	}
+
+	.hero nav{
+		display: none;
+	}
+
 }
 
 
