--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,30 @@
 *{
-	background-color: #A7FFB5	
+	background-color: white;
+}
+
+body{
+	text-align: center;
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    font-family: 'Comfortaa', arial, sans-serif;
+    transform: translate(-50%, -50%)
 }
 
 h1{
-	text-align: center;
 	color: #FA4D43;
-	font-family: 'Comfortaa', cursive;
+	font-size: 45px;
+}
+
+h2{
+	color: #FA4D43;
 	font-size: 35px;
-	padding-top: 280px;
+}
+
+h3{
+	color: #FA4D43;
+	font-size: 28px;
+	font-weight: lighter;
+	margin-top: 200px;
 }
