--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,45 @@
 *{
-	background-color: white;
+  margin: 0;
+}
+#preview{
+	background-color: #BAFFB3;
+	height: 775px;
+	width: 100%;
+  	padding-top: 65px;
+}
+.eyewhite{
+  width: 150px;
+  height: 150px;
+  border-radius: 100%;
+  background-color: #FFF;
+	float: left;
 }
 
-body{
-	text-align: center;
+.eyeblack{
 	position: absolute;
+  width: 80px;
+  height: 80px;
+  border-radius: 100%;
+  background-color: #000;
+}
+.eyewhite:first-child{
+  margin-right: 150px;
+}
+.eyes{
+  width:450px;
+  margin: 0 auto;
+}
+
+.header{
+  text-align: center;
+  margin-bottom: 100px;
+}
+
+-
+
+body{
+  text-align: center;
+  position: absolute;
     top: 50%;
     left: 50%;
     margin-right: -50%;
@@ -13,18 +48,31 @@ body{
 }
 
 h1{
-	color: #FA4D43;
-	font-size: 45px;
+  font-family: 'Comfortaa', arial, sans-serif;
+  font-size: 45px;
 }
 
 h2{
-	color: #FA4D43;
-	font-size: 35px;
+  font-family: 'Comfortaa', arial, sans-serif;
+  font-size: 35px;
 }
 
 h3{
-	color: #FA4D43;
-	font-size: 28px;
-	font-weight: lighter;
-	margin-top: 200px;
+  font-family: 'Comfortaa', arial, sans-serif;
+  font-size: 28px;
+  padding-top: 275px;
+  text-align: center;
 }
+
+
+h4{
+  font-family: 'Comfortaa', arial, sans-serif;
+  font-size: 28px;
+  text-align: center;
+  padding-top: 150px;
+  padding-bottom: 100px;
+}
+
+
+
+
