--- a/css/main.css
+++ b/css/main.css
@@ -1,100 +1,91 @@
 *{
-  margin: 0;
-}
-#preview{
-	background-color: #BAFFB3;
-	height: 775px;
-	width: 100%;
-  	padding-top: 65px;
-}
-.eyewhite{
-  width: 150px;
-  height: 150px;
-  border-radius: 100%;
-  background-color: #FFF;
-	float: left;
-}
-
-.eyeblack{
-	position: absolute;
-  width: 80px;
-  height: 80px;
-  border-radius: 100%;
-  background-color: #000;
-}
-.eyewhite:first-child{
-  margin-right: 150px;
-}
-.eyes{
-  width:450px;
-  margin: 0 auto;
-}
-
-.header{
-  text-align: center;
-  margin-bottom: 100px;
-}
-
--
+/*	background-color: white;
+*/}
 
 body{
-  text-align: center;
-  position: absolute;
+	text-align: center;
+	position: absolute;
     top: 50%;
     left: 50%;
     margin-right: -50%;
-    font-family: 'Comfortaa', arial, sans-serif;
     transform: translate(-50%, -50%)
 }
 
 h1{
-  font-family: 'Comfortaa', arial, sans-serif;
-  font-size: 45px;
-}
-
-h2{
-  font-family: 'Comfortaa', arial, sans-serif;
-  font-size: 35px;
-}
-
-h3{
-  font-family: 'Comfortaa', arial, sans-serif;
-  font-size: 28px;
-  padding-top: 275px;
-  text-align: center;
-}
-
-
-h4{
-  font-family: 'Comfortaa', arial, sans-serif;
-  font-size: 28px;
-  text-align: center;
-  padding-top: 175px;
-  padding-bottom: 100px;
-}
-
-@media screen and (max-width: 1024px){
-
-}
-
-@media screen and (max-width: 768px){
-.eyes{
-  display: none;
-}
-
-.eyewhite{
-  display: none;
-}
-
-.eyeblack{
-  display: none;
+	color: black;
+	font-size: 60px;
+	margin-bottom: 100px;
+	letter-spacing: 1.5px;
+	font-family: 'Lato', arial, sans-serif;
 }
 
 h3{
-  display:none;
+	color: black;
+	font-size: 24px;
+	font-weight: lighter;
+	font-family: 'Lato', arial, sans-serif;
+	width: 70%;
+	margin: 0 auto;
+	letter-spacing: .60px;
+	line-height: 1.5em;
 }
 
-@media screen and (max-width:480px){
- 
+h3 a{
+	background-color: black;
+	color: white;
+	text-decoration: none;
 }
+
+h3 a:hover,
+h3 a:focus,
+h3 a:active
+{
+    background-color: #FA4D43;
+}
+
+}
+
+.social{
+	margin-top: 50px;
+}
+
+ul.social {
+    margin-bottom: 0;
+}
+
+ul.social li{
+	list-style: none;
+	display: inline-block;
+ 	}
+
+ul.social li a {
+    display: block;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    font-size: 20px;
+    line-height: 40px;
+    outline: 0;
+    color: #fff;
+    background-color: #222;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    transition: all .3s;
+}
+
+ul.social li a i {
+    color: white;
+    font-size: .8em;
+}
+
+ul.social li a:hover,
+ul.social li a:focus,
+ul.social li a:active {
+    background-color: #FA4D43;
+}
+
+footer{
+	margin-top: 80px;
+}
+
 
