--- a/css/agency.css
+++ b/css/agency.css
@@ -5,9 +5,12 @@
  */
 
 body {
+    height: 100%;
     overflow-x: hidden;
     font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
+
+html {background-color: #222;}
 
 .text-muted {
     color: #777;
@@ -446,7 +449,7 @@ section h3.section-subheading {
     }
 }
 
-.timeline {
+/*.timeline {
     position: relative;
     padding: 0;
     list-style: none;
@@ -557,7 +560,7 @@ section h3.section-subheading {
 .timeline .timeline-body>p,
 .timeline .timeline-body>ul {
     margin-bottom: 0;
-}
+}*//*
 
 @media(min-width:768px) {
     .timeline:before {
@@ -644,7 +647,7 @@ section h3.section-subheading {
     .timeline>li.timeline-inverted>.timeline-panel {
         padding: 0 100px 20px 20px;
     }
-}
+}*/
 
 /*.team-member {
     margin-bottom: 50px;
@@ -676,6 +679,7 @@ aside.clients img {
     padding-top: 50px;
 }
 
+
 section#contact {
     background-color: #222;
     /*background-image: url(../img/map-image.png);*/
@@ -688,13 +692,16 @@ section#contact {
     color: white;
 }
 
+footer{
+    overflow: auto;
+}
+
 footer a:hover,
 footer a:focus,
 footer a:active
 {
     outline-style: none;;
 }
-
 
 section#contact .section-heading {
     color: #fff;
@@ -989,4 +996,3 @@ body {
         display: inline-block;
         float: none;
     }
-}
