--- a/css/agency.css
+++ b/css/agency.css
@@ -27,6 +27,9 @@ p.large {
     font-size: 16px;
 }
 
+iframe{
+}
+
 a,
 a:hover,
 a:focus,
@@ -359,6 +362,7 @@ section h3.section-subheading {
 @media(min-width:768px) {
     section {
         padding: 100px 0;
+        padding-bottom: 60px;
     }
 }
 
@@ -443,8 +447,62 @@ section h3.section-subheading {
         margin: 0 0 30px;
     }
 }
+?
 
-/*.timeline {
+
+@media(min-width:992px) {
+    .timeline>li {
+        min-height: 150px;
+    }
+
+    .timeline>li .timeline-panel {
+        padding: 0 20px 20px;
+    }
+
+    .timeline>li .timeline-image {
+        width: 150px;
+        height: 150px;
+        margin-left: -75px;]
+    }
+
+    .timeline>li .timeline-image h4 {
+        margin-top: 30px;
+        font-size: 18px;
+        line-height: 26px;
+    }
+
+    .timeline>li.timeline-inverted>.timeline-panel {
+        padding: 0 20px 20px;
+    }
+}
+
+@media(min-width:1200px) {
+    .timeline>li {
+        min-height: 170px;
+    }
+
+    .timeline>li .timeline-panel {
+        padding: 0 20px 20px 100px;
+    }
+
+    .timeline>li .timeline-image {
+        width: 170px;
+        height: 170px;
+        margin-left: -85px;
+    }
+
+    .timeline>li .timeline-image h4 {
+        margin-top: 40px;
+    }
+
+    .timeline>li.timeline-inverted>.timeline-panel {
+        padding: 0 100px 20px 20px;
+    }
+}
+
+
+
+.timeline {
     position: relative;
     padding: 0;
     list-style: none;
@@ -555,7 +613,7 @@ section h3.section-subheading {
 .timeline .timeline-body>p,
 .timeline .timeline-body>ul {
     margin-bottom: 0;
-}*//*
+}
 
 @media(min-width:768px) {
     .timeline:before {
@@ -563,7 +621,7 @@ section h3.section-subheading {
     }
 
     .timeline>li {
-        margin-bottom: 100px;
+        margin-bottom: 20px;
         min-height: 100px;
     }
 
@@ -642,8 +700,7 @@ section h3.section-subheading {
     .timeline>li.timeline-inverted>.timeline-panel {
         padding: 0 100px 20px 20px;
     }
-}*/
-
+}
 /*.team-member {
     margin-bottom: 50px;
     text-align: center;
@@ -966,12 +1023,12 @@ ul.social-buttons li a:active {
 
 ::-moz-selection {
     text-shadow: none;
-    background: #FA4D43;
+    background: #92FFAC;
 }
 
 ::selection {
     text-shadow: none;
-    background: #FA4D43;
+    background: #92FFAC;
 }
 
 img::selection {
