--- a/css/agency.css
+++ b/css/agency.css
@@ -405,6 +405,22 @@ section h3.section-subheading {
     transition: all ease .5s;
 }
 
+#portfolio .portfolio-item .portfolio-link .portfolio-hoverUC {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background: rgba(146,255,172,.9);
+    -webkit-transition: all ease .5s;
+    -moz-transition: all ease .5s;
+    transition: all ease .5s;
+}
+
+
+
+#portfolio .portfolio-item .portfolio-link .portfolio-hoverUC h2 {
+margin-top:0;
+}
 #portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
     opacity: 1;
 }
