--- a/css/agency.css
+++ b/css/agency.css
@@ -895,6 +895,10 @@ ul.social-buttons {
     margin-bottom: 0;
 }
 
+ul.social-links{
+    display: inline-block;
+}
+
 ul.social-buttons li a {
     display: block;
     width: 40px;
